@@ -14,10 +14,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.apache.nifi.minifi.bootstrap.service;
 
-import static org.apache.nifi.minifi.commons.schema.common.BootstrapPropertyKeys.STATUS_REPORTER_COMPONENTS_KEY;
-
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedList;
@@ -32,6 +32,8 @@ import org.apache.nifi.minifi.commons.status.FlowStatusReport;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import static org.apache.nifi.minifi.commons.api.MiNiFiProperties.NIFI_MINIFI_STATUS_REPORTER_COMPONENTS;
+
 public class PeriodicStatusReporterManager implements QueryableStatusAggregator {
     private static final Logger LOGGER = LoggerFactory.getLogger(PeriodicStatusReporterManager.class);
     private static final String FLOW_STATUS_REPORT_CMD = "FLOW_STATUS_REPORT";
@@ -44,7 +46,7 @@ public class PeriodicStatusReporterManager implements QueryableStatusAggregator 
     private Set<PeriodicStatusReporter> periodicStatusReporters = Collections.emptySet();
 
     public PeriodicStatusReporterManager(Properties bootstrapProperties, MiNiFiStatusProvider miNiFiStatusProvider, MiNiFiCommandSender miNiFiCommandSender,
-        MiNiFiParameters miNiFiParameters) {
+                                         MiNiFiParameters miNiFiParameters) {
         this.bootstrapProperties = bootstrapProperties;
         this.miNiFiStatusProvider = miNiFiStatusProvider;
         this.miNiFiCommandSender = miNiFiCommandSender;
@@ -54,7 +56,7 @@ public class PeriodicStatusReporterManager implements QueryableStatusAggregator 
     public void startPeriodicNotifiers() {
         periodicStatusReporters = initializePeriodicNotifiers();
 
-        for (PeriodicStatusReporter periodicStatusReporter: periodicStatusReporters) {
+        for (PeriodicStatusReporter periodicStatusReporter : periodicStatusReporters) {
             periodicStatusReporter.start();
             LOGGER.debug("Started {} notifier", periodicStatusReporter.getClass().getCanonicalName());
         }
@@ -96,17 +98,17 @@ public class PeriodicStatusReporterManager implements QueryableStatusAggregator 
         LOGGER.debug("Initiating bootstrap periodic status reporters...");
         Set<PeriodicStatusReporter> statusReporters = new HashSet<>();
 
-        String reportersCsv = bootstrapProperties.getProperty(STATUS_REPORTER_COMPONENTS_KEY);
+        String reportersCsv = bootstrapProperties.getProperty(NIFI_MINIFI_STATUS_REPORTER_COMPONENTS.getKey());
 
         if (reportersCsv != null && !reportersCsv.isEmpty()) {
             for (String reporterClassname : reportersCsv.split(",")) {
                 try {
                     Class<?> reporterClass = Class.forName(reporterClassname);
-                    PeriodicStatusReporter reporter = (PeriodicStatusReporter) reporterClass.newInstance();
+                    PeriodicStatusReporter reporter = (PeriodicStatusReporter) reporterClass.getDeclaredConstructor().newInstance();
                     reporter.initialize(bootstrapProperties, this);
                     statusReporters.add(reporter);
                     LOGGER.debug("Initialized {} notifier", reporterClass.getCanonicalName());
-                } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+                } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
                     throw new RuntimeException("Issue instantiating notifier " + reporterClassname, e);
                 }
             }
