@@ -16,22 +16,14 @@
  */
 package org.apache.nifi.processors.aws.dynamodb;
 
-import java.io.ByteArrayOutputStream;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.nifi.annotation.behavior.SystemResourceConsideration;
 import org.apache.nifi.annotation.behavior.InputRequirement;
+import org.apache.nifi.annotation.behavior.InputRequirement.Requirement;
 import org.apache.nifi.annotation.behavior.ReadsAttribute;
 import org.apache.nifi.annotation.behavior.ReadsAttributes;
-import org.apache.nifi.annotation.behavior.InputRequirement.Requirement;
 import org.apache.nifi.annotation.behavior.SupportsBatching;
 import org.apache.nifi.annotation.behavior.SystemResource;
+import org.apache.nifi.annotation.behavior.SystemResourceConsideration;
 import org.apache.nifi.annotation.behavior.WritesAttribute;
 import org.apache.nifi.annotation.behavior.WritesAttributes;
 import org.apache.nifi.annotation.documentation.CapabilityDescription;
@@ -41,15 +33,21 @@ import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
+import software.amazon.awssdk.awscore.exception.AwsServiceException;
+import software.amazon.awssdk.core.exception.SdkException;
+import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
+import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
+import software.amazon.awssdk.services.dynamodb.model.BatchWriteItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.BatchWriteItemResponse;
+import software.amazon.awssdk.services.dynamodb.model.PutRequest;
+import software.amazon.awssdk.services.dynamodb.model.WriteRequest;
 
-import com.amazonaws.AmazonClientException;
-import com.amazonaws.AmazonServiceException;
-import com.amazonaws.services.dynamodbv2.document.BatchWriteItemOutcome;
-import com.amazonaws.services.dynamodbv2.document.DynamoDB;
-import com.amazonaws.services.dynamodbv2.document.Item;
-import com.amazonaws.services.dynamodbv2.document.TableWriteItems;
-import com.amazonaws.services.dynamodbv2.model.AttributeValue;
-import com.amazonaws.services.dynamodbv2.model.WriteRequest;
+import java.io.ByteArrayOutputStream;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @SupportsBatching
 @SeeAlso({DeleteDynamoDB.class, GetDynamoDB.class, PutDynamoDBRecord.class})
@@ -66,7 +64,6 @@ import com.amazonaws.services.dynamodbv2.model.WriteRequest;
     @WritesAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ERROR_EXCEPTION_MESSAGE, description = "DynamoDB exception message"),
     @WritesAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ERROR_CODE, description = "DynamoDB error code"),
     @WritesAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ERROR_MESSAGE, description = "DynamoDB error message"),
-    @WritesAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ERROR_TYPE, description = "DynamoDB error type"),
     @WritesAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ERROR_SERVICE, description = "DynamoDB error service"),
     @WritesAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ERROR_RETRYABLE, description = "DynamoDB error is retryable"),
     @WritesAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ERROR_REQUEST_ID, description = "DynamoDB error request id"),
@@ -78,17 +75,26 @@ import com.amazonaws.services.dynamodbv2.model.WriteRequest;
     @ReadsAttribute(attribute = AbstractDynamoDBProcessor.DYNAMODB_ITEM_RANGE_KEY_VALUE, description = "Items range key value")
 })
 @SystemResourceConsideration(resource = SystemResource.MEMORY)
-public class PutDynamoDB extends AbstractWriteDynamoDBProcessor {
+public class PutDynamoDB extends AbstractDynamoDBProcessor {
 
-    public static final List<PropertyDescriptor> properties = Collections.unmodifiableList(
-        Arrays.asList(TABLE, HASH_KEY_NAME, RANGE_KEY_NAME, HASH_KEY_VALUE, RANGE_KEY_VALUE,
-            HASH_KEY_VALUE_TYPE, RANGE_KEY_VALUE_TYPE, JSON_DOCUMENT, DOCUMENT_CHARSET, BATCH_SIZE,
-            REGION, ACCESS_KEY, SECRET_KEY, CREDENTIALS_FILE, AWS_CREDENTIALS_PROVIDER_SERVICE, TIMEOUT, SSL_CONTEXT_SERVICE,
-            PROXY_CONFIGURATION_SERVICE, PROXY_HOST, PROXY_HOST_PORT, PROXY_USERNAME, PROXY_PASSWORD));
+    public static final List<PropertyDescriptor> properties = List.of(
+        TABLE,
+        REGION,
+        AWS_CREDENTIALS_PROVIDER_SERVICE,
+        JSON_DOCUMENT,
+        HASH_KEY_NAME,
+        RANGE_KEY_NAME,
+        HASH_KEY_VALUE,
+        RANGE_KEY_VALUE,
+        HASH_KEY_VALUE_TYPE,
+        RANGE_KEY_VALUE_TYPE,
+        DOCUMENT_CHARSET,
+        BATCH_SIZE,
+        TIMEOUT,
+        ENDPOINT_OVERRIDE,
+        SSL_CONTEXT_SERVICE,
+        PROXY_CONFIGURATION_SERVICE);
 
-    /**
-     * Dyamodb max item size limit 400 kb
-     */
     public static final int DYNAMODB_MAX_ITEM_SIZE = 400 * 1024;
 
     @Override
@@ -108,17 +114,17 @@ public class PutDynamoDB extends AbstractWriteDynamoDBProcessor {
         final String table = context.getProperty(TABLE).evaluateAttributeExpressions().getValue();
 
         final String hashKeyName = context.getProperty(HASH_KEY_NAME).evaluateAttributeExpressions().getValue();
-        final String hashKeyValueType = context.getProperty(HASH_KEY_VALUE_TYPE).getValue();
         final String rangeKeyName = context.getProperty(RANGE_KEY_NAME).evaluateAttributeExpressions().getValue();
-        final String rangeKeyValueType = context.getProperty(RANGE_KEY_VALUE_TYPE).getValue();
         final String jsonDocument = context.getProperty(JSON_DOCUMENT).evaluateAttributeExpressions().getValue();
         final String charset = context.getProperty(DOCUMENT_CHARSET).evaluateAttributeExpressions().getValue();
 
-        TableWriteItems tableWriteItems = new TableWriteItems(table);
+        final Map<String, Collection<WriteRequest>> tableNameRequestItemsMap = new HashMap<>();
+        final Collection<WriteRequest> requestItems = new ArrayList<>();
+        tableNameRequestItemsMap.put(table, requestItems);
 
         for (FlowFile flowFile : flowFiles) {
-            final Object hashKeyValue = getValue(context, HASH_KEY_VALUE_TYPE, HASH_KEY_VALUE, flowFile.getAttributes());
-            final Object rangeKeyValue = getValue(context, RANGE_KEY_VALUE_TYPE, RANGE_KEY_VALUE, flowFile.getAttributes());
+            final AttributeValue hashKeyValue = getAttributeValue(context, HASH_KEY_VALUE_TYPE, HASH_KEY_VALUE, flowFile.getAttributes());
+            final AttributeValue rangeKeyValue = getAttributeValue(context, RANGE_KEY_VALUE_TYPE, RANGE_KEY_VALUE, flowFile.getAttributes());
 
             if (!isHashKeyValueConsistent(hashKeyName, hashKeyValue, session, flowFile)) {
                 continue;
@@ -134,17 +140,22 @@ public class PutDynamoDB extends AbstractWriteDynamoDBProcessor {
                 continue;
             }
 
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
             session.exportTo(flowFile, baos);
 
-            if (rangeKeyValue == null || StringUtils.isBlank(rangeKeyValue.toString())) {
-                tableWriteItems.addItemToPut(new Item().withKeyComponent(hashKeyName, hashKeyValue)
-                    .withJSON(jsonDocument, IOUtils.toString(baos.toByteArray(), charset)));
-            } else {
-                tableWriteItems.addItemToPut(new Item().withKeyComponent(hashKeyName, hashKeyValue)
-                    .withKeyComponent(rangeKeyName, rangeKeyValue)
-                    .withJSON(jsonDocument, IOUtils.toString(baos.toByteArray(), charset)));
+            final Map<String, AttributeValue> item = new HashMap<>();
+            item.put(hashKeyName, hashKeyValue);
+            if (!isBlank(rangeKeyValue)) {
+                item.put(rangeKeyName, rangeKeyValue);
             }
+            final String jsonText = IOUtils.toString(baos.toByteArray(), charset);
+            final AttributeValue jsonValue = AttributeValue.builder().s(jsonText).build();
+            item.put(jsonDocument, jsonValue);
+
+            final PutRequest putRequest = PutRequest.builder().item(item).build();
+            final WriteRequest writeRequest = WriteRequest.builder().putRequest(putRequest).build();
+            requestItems.add(writeRequest);
+
             keysToFlowFileMap.put(new ItemKeys(hashKeyValue, rangeKeyValue), flowFile);
         }
 
@@ -152,26 +163,38 @@ public class PutDynamoDB extends AbstractWriteDynamoDBProcessor {
             return;
         }
 
-        final DynamoDB dynamoDB = getDynamoDB(context);
+        final DynamoDbClient client = getClient(context);
 
         try {
-            BatchWriteItemOutcome outcome = dynamoDB.batchWriteItem(tableWriteItems);
+            final BatchWriteItemRequest batchWriteItemRequest = BatchWriteItemRequest.builder().requestItems(tableNameRequestItemsMap).build();
+            final BatchWriteItemResponse response = client.batchWriteItem(batchWriteItemRequest);
 
-            handleUnprocessedItems(session, keysToFlowFileMap, table, hashKeyName, hashKeyValueType, rangeKeyName,
-                rangeKeyValueType, outcome);
+            if (response.unprocessedItems() != null) {
+                // Handle unprocessed items
+                final List<WriteRequest> unprocessedItems = response.unprocessedItems().get(table);
+                if (unprocessedItems != null) {
+                    for (final WriteRequest request : unprocessedItems) {
+                        final Map<String, AttributeValue> item = request.putRequest().item();
+                        final AttributeValue hashKeyValue = item.get(hashKeyName);
+                        final AttributeValue rangeKeyValue = item.get(rangeKeyName);
+
+                        sendUnprocessedToUnprocessedRelationship(session, keysToFlowFileMap, hashKeyValue, rangeKeyValue);
+                    }
+                }
+            }
 
             // Handle any remaining flowfiles
-            for (FlowFile flowFile : keysToFlowFileMap.values()) {
+            for (final FlowFile flowFile : keysToFlowFileMap.values()) {
                 getLogger().debug("Successful posted items to dynamodb : " + table);
                 session.transfer(flowFile, REL_SUCCESS);
             }
-        } catch (AmazonServiceException exception) {
+        } catch (final AwsServiceException exception) {
             getLogger().error("Could not process flowFiles due to service exception : " + exception.getMessage());
             List<FlowFile> failedFlowFiles = processServiceException(session, flowFiles, exception);
             session.transfer(failedFlowFiles, REL_FAILURE);
-        } catch (AmazonClientException exception) {
-            getLogger().error("Could not process flowFiles due to client exception : " + exception.getMessage());
-            List<FlowFile> failedFlowFiles = processClientException(session, flowFiles, exception);
+        } catch (final SdkException exception) {
+            getLogger().error("Could not process flowFiles due to SDK exception : " + exception.getMessage());
+            List<FlowFile> failedFlowFiles = processSdkException(session, flowFiles, exception);
             session.transfer(failedFlowFiles, REL_FAILURE);
         } catch (Exception exception) {
             getLogger().error("Could not process flowFiles due to exception : " + exception.getMessage());
@@ -182,13 +205,6 @@ public class PutDynamoDB extends AbstractWriteDynamoDBProcessor {
 
     private boolean isDataValid(FlowFile flowFile, String jsonDocument) {
         return (flowFile.getSize() + jsonDocument.length()) < DYNAMODB_MAX_ITEM_SIZE;
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    protected Map<String, AttributeValue> getRequestItem(WriteRequest writeRequest) {
-        return writeRequest.getPutRequest().getItem();
     }
 
 }
