@@ -18,6 +18,7 @@ package org.apache.nifi.reporting.azure.loganalytics;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.text.DateFormat;
 import java.text.MessageFormat;
@@ -45,7 +46,6 @@ import org.apache.nifi.annotation.documentation.Tags;
 import org.apache.nifi.annotation.lifecycle.OnUnscheduled;
 import org.apache.nifi.components.AllowableValue;
 import org.apache.nifi.components.PropertyDescriptor;
-import org.apache.nifi.controller.ConfigurationContext;
 import org.apache.nifi.controller.status.ProcessGroupStatus;
 import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.processor.util.StandardValidators;
@@ -65,7 +65,7 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
         static final PropertyDescriptor LOG_ANALYTICS_CUSTOM_LOG_NAME = new PropertyDescriptor.Builder()
                         .name("Log Analytics Custom Log Name").description("Log Analytics Custom Log Name").required(false)
                         .defaultValue("nifiprovenance").addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
-                        .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY).build();
+                        .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT).build();
 
         static final AllowableValue BEGINNING_OF_STREAM = new AllowableValue("beginning-of-stream",
                         "Beginning of Stream",
@@ -81,7 +81,7 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
                                         + Arrays.deepToString(ProvenanceEventType.values())
                                         + ". If no filter is set, all the events are sent. If "
                                         + "multiple filters are set, the filters are cumulative.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.NON_EMPTY_VALIDATOR).build();
 
         static final PropertyDescriptor FILTER_EVENT_TYPE_EXCLUDE = new PropertyDescriptor.Builder()
@@ -92,14 +92,14 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
                                         + ". If no filter is set, all the events are sent. If "
                                         + "multiple filters are set, the filters are cumulative. If an event type is included in Event Type to Include and excluded here, then the "
                                         + "exclusion takes precedence and the event will not be sent.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.NON_EMPTY_VALIDATOR).build();
 
         static final PropertyDescriptor FILTER_COMPONENT_TYPE = new PropertyDescriptor.Builder()
                         .name("s2s-prov-task-type-filter").displayName("Component Type to Include")
                         .description("Regular expression to filter the provenance events based on the component type. Only the events matching the regular "
                                         + "expression will be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR).build();
 
         static final PropertyDescriptor FILTER_COMPONENT_TYPE_EXCLUDE = new PropertyDescriptor.Builder()
@@ -107,14 +107,14 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
                         .description("Regular expression to exclude the provenance events based on the component type. The events matching the regular "
                                         + "expression will not be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative. "
                                         + "If a component type is included in Component Type to Include and excluded here, then the exclusion takes precedence and the event will not be sent.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR).build();
 
         static final PropertyDescriptor FILTER_COMPONENT_ID = new PropertyDescriptor.Builder()
                         .name("s2s-prov-task-id-filter").displayName("Component ID to Include")
                         .description("Comma-separated list of component UUID that will be used to filter the provenance events sent by the reporting task. If no "
                                         + "filter is set, all the events are sent. If multiple filters are set, the filters are cumulative.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.NON_EMPTY_VALIDATOR).build();
 
         static final PropertyDescriptor FILTER_COMPONENT_ID_EXCLUDE = new PropertyDescriptor.Builder()
@@ -122,14 +122,14 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
                         .description("Comma-separated list of component UUID that will be used to exclude the provenance events sent by the reporting task. If no "
                                         + "filter is set, all the events are sent. If multiple filters are set, the filters are cumulative. If a component UUID is included in "
                                         + "Component ID to Include and excluded here, then the exclusion takes precedence and the event will not be sent.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.NON_EMPTY_VALIDATOR).build();
 
         static final PropertyDescriptor FILTER_COMPONENT_NAME = new PropertyDescriptor.Builder()
                         .name("s2s-prov-task-name-filter").displayName("Component Name to Include")
                         .description("Regular expression to filter the provenance events based on the component name. Only the events matching the regular "
                                         + "expression will be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR).build();
 
         static final PropertyDescriptor FILTER_COMPONENT_NAME_EXCLUDE = new PropertyDescriptor.Builder()
@@ -137,7 +137,7 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
                         .description("Regular expression to exclude the provenance events based on the component name. The events matching the regular "
                                         + "expression will not be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative. "
                                         + "If a component name is included in Component Name to Include and excluded here, then the exclusion takes precedence and the event will not be sent.")
-                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .required(false).expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR).build();
 
         static final PropertyDescriptor START_POSITION = new PropertyDescriptor.Builder().name("start-position")
@@ -154,13 +154,13 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
 
         static final PropertyDescriptor PLATFORM = new PropertyDescriptor.Builder().name("Platform")
                         .description("The value to use for the platform field in each event.").required(true)
-                        .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY).defaultValue("nifi")
+                        .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT).defaultValue("nifi")
                         .addValidator(StandardValidators.NON_EMPTY_VALIDATOR).build();
 
         static final PropertyDescriptor INSTANCE_URL = new PropertyDescriptor.Builder().name("Instance URL")
                         .displayName("Instance URL")
                         .description("The URL of this instance to use in the Content URI of each event.").required(true)
-                        .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                        .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                         .defaultValue("http://${hostname(true)}:8080/nifi")
                         .addValidator(StandardValidators.NON_EMPTY_VALIDATOR).build();
 
@@ -168,8 +168,6 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
                         .displayName("Batch Size")
                         .description("Specifies how many records to send in a single batch, at most.").required(true)
                         .defaultValue("1000").addValidator(StandardValidators.POSITIVE_INTEGER_VALIDATOR).build();
-
-        private ConfigurationContext context;
 
         private volatile ProvenanceEventConsumer consumer;
 
@@ -300,8 +298,8 @@ public class AzureLogAnalyticsProvenanceReportingTask extends AbstractAzureLogAn
                 final String nifiUrl = context.getProperty(INSTANCE_URL).evaluateAttributeExpressions().getValue();
                 URL url;
                 try {
-                        url = new URL(nifiUrl);
-                } catch (final MalformedURLException e1) {
+                        url = URI.create(nifiUrl).toURL();
+                } catch (IllegalArgumentException | MalformedURLException e) {
                         throw new AssertionError();
                 }
 
